--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -35,7 +36,6 @@ body {
   transition: background 0.35s ease;
 }
 
-/* HEADER */
 .header-wrapper {
   position: sticky;
   top: 0;
@@ -78,7 +78,6 @@ body.light-theme .logo-img {
   color: var(--accent);
 }
 
-/* MAIN CONTENT */
 .login-container {
   flex: 1;
   display: flex;
@@ -133,7 +132,7 @@ body.light-theme .logo-img {
   box-shadow: 0 6px 16px rgba(176,0,58,0.35);
   cursor: pointer;
   border: none;
-  margin-bottom: 6px;
+  margin-bottom: 12px;
   width: 100%;
 }
 .login-btn:hover {
@@ -142,7 +141,32 @@ body.light-theme .logo-img {
   box-shadow: 0 10px 22px rgba(176,0,58,0.45);
 }
 
-/* Guest Mode text */
+.google-btn {
+  background: #4285F4;
+  box-shadow: 0 6px 16px rgba(66,133,244,0.35);
+}
+.google-btn:hover {
+  background: #357ae8;
+  box-shadow: 0 10px 22px rgba(66,133,244,0.45);
+}
+
+.divider {
+  display: flex;
+  align-items: center;
+  margin: 20px 0;
+  color: #666;
+  font-size: 13px;
+}
+.divider::before,
+.divider::after {
+  content: '';
+  flex: 1;
+  height: 1px;
+  background: var(--card-border);
+}
+.divider::before { margin-right: 12px; }
+.divider::after { margin-left: 12px; }
+
 .guest-text {
   display: block;
   font-size: 14px;
@@ -211,7 +235,6 @@ footer a:hover { color: var(--accent); }
 </head>
 <body>
 
-<!-- HEADER -->
 <div class="header-wrapper">
   <div class="header">
     <a href="https://patholytica.com">
@@ -221,60 +244,71 @@ footer a:hover { color: var(--accent); }
   </div>
 </div>
 
-<!-- MAIN -->
 <div class="login-container">
   <div class="login-card">
 
-    <h1>Welcome to Patholytica</h1>
-    <p>Your tool to <strong>LOVE</strong> what you learn</p>
+```
+<h1>Welcome to Patholytica</h1>
+<p>Your tool to <strong>LOVE</strong> what you learn</p>
 
-    <a class="login-btn" id="startLoginBtn">Login to Continue</a>
-    <button id="googleLoginBtn" class="login-btn" style="background:#4285F4; box-shadow: 0 6px 16px rgba(66,133,244,0.35); margin-bottom:6px;">
-      Continue with Google
-    </button>
-    <span class="guest-text" id="guestBtn">Guest Mode</span>
+<!-- Initial buttons -->
+<div id="initialButtons">
+  <button id="googleLoginBtn" class="login-btn google-btn">
+    Continue with Google
+  </button>
+  
+  <div class="divider">OR</div>
+  
+  <button class="login-btn" id="startLoginBtn">Login with Email</button>
+  
+  <span class="guest-text" id="guestBtn">Guest Mode</span>
+</div>
 
-    <!-- Login form -->
-    <form id="loginForm" style="display:none; margin-top:20px; animation: fadeUp 0.5s ease both;">
-      <input type="email" placeholder="Email Address" class="input-field" required>
-      <input type="password" placeholder="Password" class="input-field" required>
+<!-- Login form -->
+<form id="loginForm" style="display:none; margin-top:20px; animation: fadeUp 0.5s ease both;">
+  <input type="email" placeholder="Email Address" class="input-field" required>
+  <input type="password" placeholder="Password" class="input-field" required>
 
-      <button type="submit" class="login-btn" style="width:100%; margin-top:12px;">Continue</button>
+  <button type="submit" class="login-btn" style="width:100%; margin-top:12px;">Continue</button>
 
-      <p style="margin-top:20px; font-size:14px; color:#999;">
-        Don't have an account? 
-        <a href="#" id="showSignupLink" style="color:var(--accent); text-decoration:none; font-weight:600;">
-          Sign up
-        </a>
-      </p>
-    </form>
+  <p style="margin-top:20px; font-size:14px; color:#999;">
+    Don't have an account? 
+    <a href="#" id="showSignupLink" style="color:var(--accent); text-decoration:none; font-weight:600;">
+      Sign up
+    </a>
+  </p>
+  
+  <p style="margin-top:10px; font-size:14px;">
+    <a href="#" id="backToInitial" style="color:#888; text-decoration:none;">← Back</a>
+  </p>
+</form>
 
-    <!-- Signup form -->
-    <form id="signupForm" style="display:none; margin-top:20px; animation: fadeUp 0.5s ease both;">
-      <input type="text" placeholder="Full Name" class="input-field" required>
-      <input type="email" placeholder="Email Address" class="input-field" required>
-      <input type="text" placeholder="Username" class="input-field" required>
-      <input type="password" placeholder="Password (min. 8 characters)" class="input-field" minlength="8" required>
-      <input type="password" placeholder="Confirm Password" class="input-field" required>
+<!-- Signup form -->
+<form id="signupForm" style="display:none; margin-top:20px; animation: fadeUp 0.5s ease both;">
+  <input type="text" placeholder="Full Name" class="input-field" required>
+  <input type="email" placeholder="Email Address" class="input-field" required>
+  <input type="text" placeholder="Username" class="input-field" required>
+  <input type="password" placeholder="Password (min. 8 characters)" class="input-field" minlength="8" required>
+  <input type="password" placeholder="Confirm Password" class="input-field" required>
 
-      <label style="display:flex; align-items:center; justify-content:center; margin:16px 0; font-size:13px; color:#999;">
-        <input type="checkbox" required style="margin-right:8px;">
-        I agree to the <a href="#" style="color:var(--accent); margin:0 3px;">Terms</a> 
-        and <a href="#" style="color:var(--accent); margin:0 3px;">Privacy Policy</a>
-      </label>
+  <label style="display:flex; align-items:center; justify-content:center; margin:16px 0; font-size:13px; color:#999;">
+    <input type="checkbox" required style="margin-right:8px;">
+    I agree to the <a href="#" style="color:var(--accent); margin:0 3px;">Terms</a> 
+    and <a href="#" style="color:var(--accent); margin:0 3px;">Privacy Policy</a>
+  </label>
 
-      <button type="submit" class="login-btn" style="width:100%; margin-top:12px;">Create Account</button>
+  <button type="submit" class="login-btn" style="width:100%; margin-top:12px;">Create Account</button>
 
-      <p style="margin-top:20px; font-size:14px; color:#999;">
-        Already have an account?
-        <a href="#" id="showLoginLink" style="color:var(--accent); font-weight:600;">Login</a>
-      </p>
-    </form>
+  <p style="margin-top:20px; font-size:14px; color:#999;">
+    Already have an account?
+    <a href="#" id="showLoginLink" style="color:var(--accent); font-weight:600;">Login</a>
+  </p>
+</form>
+```
 
   </div>
 </div>
 
-<!-- FOOTER -->
 <footer>
   © 2025 Patholytica by MedicineBank. All rights reserved.
   <br>
@@ -283,13 +317,10 @@ footer a:hover { color: var(--accent); }
   <a href="#">Contact</a>
 </footer>
 
-<!-- FIREBASE -->
 <script type="module">
-// Import Firebase modules
 import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js';
 import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, GoogleAuthProvider, signInWithPopup } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js';
 
-// Firebase config
 const firebaseConfig = {
   apiKey: "AIzaSyBs6V0yY14cuLBXB1nciZ-X0eyAiodC-Ak",
   authDomain: "patholytica.firebaseapp.com",
@@ -299,7 +330,6 @@ const firebaseConfig = {
   appId: "1:738430635282:web:8451ef380447c7611137cb"
 };
 
-// Init Firebase
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 
@@ -316,28 +346,36 @@ if (localStorage.getItem("theme") === "light") {
   document.body.classList.add("light-theme");
 }
 
-// Make toggleTheme globally accessible
 window.toggleTheme = toggleTheme;
 
 // UI elements
+const initialButtons = document.getElementById("initialButtons");
 const startBtn = document.getElementById("startLoginBtn");
 const form = document.getElementById("loginForm");
 const signupForm = document.getElementById("signupForm");
 const showSignupLink = document.getElementById("showSignupLink");
 const showLoginLink = document.getElementById("showLoginLink");
 const guestBtn = document.getElementById("guestBtn");
+const backToInitial = document.getElementById("backToInitial");
 
 // Show login form
 startBtn.addEventListener("click", () => {
-  startBtn.style.opacity = "0";
-  guestBtn.style.opacity = "0";
-  startBtn.style.pointerEvents = "none";
-  guestBtn.style.pointerEvents = "none";
-
+  initialButtons.style.opacity = "0";
   setTimeout(() => {
-    startBtn.style.display = "none";
-    guestBtn.style.display = "none";
+    initialButtons.style.display = "none";
     form.style.display = "block";
+    form.style.opacity = "1";
+  }, 250);
+});
+
+// Back to initial
+backToInitial.addEventListener("click", (e) => {
+  e.preventDefault();
+  form.style.opacity = "0";
+  setTimeout(() => {
+    form.style.display = "none";
+    initialButtons.style.display = "block";
+    initialButtons.style.opacity = "1";
   }, 250);
 });
 
@@ -350,7 +388,6 @@ guestBtn.addEventListener("click", () => {
 showSignupLink.addEventListener("click", (e) => {
   e.preventDefault();
   form.style.opacity = "0";
-
   setTimeout(() => {
     form.style.display = "none";
     signupForm.style.display = "block";
@@ -362,7 +399,6 @@ showSignupLink.addEventListener("click", (e) => {
 showLoginLink.addEventListener("click", (e) => {
   e.preventDefault();
   signupForm.style.opacity = "0";
-
   setTimeout(() => {
     signupForm.style.display = "none";
     form.style.display = "block";
@@ -373,7 +409,6 @@ showLoginLink.addEventListener("click", (e) => {
 // LOGIN
 form.addEventListener("submit", (e) => {
   e.preventDefault();
-
   const inputs = form.querySelectorAll("input");
   const email = inputs[0].value;
   const password = inputs[1].value;
@@ -382,13 +417,15 @@ form.addEventListener("submit", (e) => {
     .then(() => {
       window.location.href = "dashboard.html";
     })
-    .catch(err => alert(err.message));
+    .catch(err => {
+      console.error("Login error:", err);
+      alert("Login failed: " + err.message);
+    });
 });
 
 // SIGNUP
 signupForm.addEventListener("submit", (e) => {
   e.preventDefault();
-
   const inputs = signupForm.querySelectorAll("input");
   const email = inputs[1].value;
   const password = inputs[3].value;
@@ -403,7 +440,10 @@ signupForm.addEventListener("submit", (e) => {
     .then(() => {
       window.location.href = "dashboard.html";
     })
-    .catch(err => alert(err.message));
+    .catch(err => {
+      console.error("Signup error:", err);
+      alert("Signup failed: " + err.message);
+    });
 });
 
 // GOOGLE SIGN-IN
@@ -413,13 +453,20 @@ const googleBtn = document.getElementById("googleLoginBtn");
 googleBtn.addEventListener("click", () => {
   signInWithPopup(auth, provider)
     .then((result) => {
-      const user = result.user;
-      console.log("Google User:", user);
+      console.log("Google User signed in:", result.user.email);
       window.location.href = "dashboard.html";
     })
     .catch((error) => {
-      console.error(error);
-      alert(error.message);
+      console.error("Google sign-in error:", error);
+      
+      // Provide user-friendly error messages
+      if (error.code === 'auth/popup-closed-by-user') {
+        alert("Sign-in cancelled. Please try again.");
+      } else if (error.code === 'auth/popup-blocked') {
+        alert("Popup was blocked. Please allow popups for this site and try again.");
+      } else {
+        alert("Google sign-in failed: " + error.message);
+      }
     });
 });
 </script>
