--- a/test.html
+++ b/test.html
@@ -1,364 +1,36 @@
 <!DOCTYPE html>
-
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-<title>Patholytica — Profile</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-<style>
-:root {
-  --bg-color: #0f0f0f;
-  --text-primary: #fff;
-  --text-secondary: #aaa;
-  --hover-bg: #2a2a2a;
-  --border-color: #303030;
-  --accent: #3ea6ff;
-  --accent-green: #2ecc71;
-}
-
-body.light-theme {
-–bg-color: #ffffff;
-–text-primary: #0f0f0f;
-–text-secondary: #606060;
-–hover-bg: #f0f0f0;
-–border-color: #e5e5e5;
-–accent: #065fd4;
-–accent-green: #27ae60;
-}
-
-- { box-sizing: border-box; }
-
-html, body {
-margin: 0;
-padding: 0;
-min-height: 100%;
-font-family: “Roboto”, Arial, sans-serif;
-overflow-x: hidden;
-max-width: 100vw;
-}
-
-body {
-background: var(–bg-color);
-color: var(–text-primary);
-transition: background 0.2s ease, color 0.2s ease;
-}
-
-.header-wrapper {
-position: fixed;
-top: 0;
-left: 0;
-right: 0;
-background: var(–bg-color);
-padding-top: env(safe-area-inset-top);
-border-bottom: 1px solid var(–border-color);
-z-index: 40;
-width: 100%;
-}
-
-.header {
-display: flex;
-align-items: center;
-justify-content: space-between;
-padding: 12px 24px;
-max-width: 100%;
-margin: 0 auto;
-}
-
-.logo-img {
-height: 28px;
-width: auto;
-transition: filter 0.2s ease;
-cursor: pointer;
-}
-
-body.light-theme .logo-img {
-filter: invert(1);
-}
-
-.header-actions {
-display: flex;
-align-items: center;
-gap: 16px;
-}
-
-.icon-btn {
-width: 40px;
-height: 40px;
-border-radius: 50%;
-background: transparent;
-border: none;
-color: var(–text-primary);
-cursor: pointer;
-display: flex;
-align-items: center;
-justify-content: center;
-font-size: 18px;
-transition: background 0.2s ease;
-}
-
-.icon-btn:hover {
-background: var(–hover-bg);
-}
-
-.profile-container {
-display: flex;
-align-items: center;
-justify-content: center;
-min-height: 100vh;
-padding: 100px 20px 40px;
-}
-
-.profile-card {
-background: var(–bg-color);
-border: 1px solid var(–border-color);
-border-radius: 12px;
-width: 100%;
-max-width: 400px;
-padding: 0;
-transition: all 0.2s ease;
-overflow: hidden;
-}
-
-.profile-card:hover {
-background: var(–hover-bg);
-border-color: var(–text-secondary);
-transform: translateY(-4px);
-}
-
-.avatar-container {
-width: 100%;
-aspect-ratio: 1;
-overflow: hidden;
-background: var(–hover-bg);
-position: relative;
-}
-
-.avatar-container img {
-width: 100%;
-height: 100%;
-object-fit: cover;
-transition: transform 0.2s ease;
-}
-
-.profile-card:hover .avatar-container img {
-transform: scale(1.03);
-}
-
-.card-content {
-padding: 24px;
-}
-
-.name-row {
-display: flex;
-align-items: center;
-gap: 8px;
-margin-bottom: 8px;
-}
-
-.profile-name {
-font-size: 22px;
-font-weight: 500;
-color: var(–text-primary);
-letter-spacing: -0.3px;
-}
-
-.verified-icon {
-width: 20px;
-height: 20px;
-background: var(–accent-green);
-border-radius: 50%;
-display: flex;
-align-items: center;
-justify-content: center;
-flex-shrink: 0;
-}
-
-.verified-icon::after {
-content: ‘✓’;
-color: #fff;
-font-size: 12px;
-font-weight: bold;
-}
-
-.profile-bio {
-font-size: 14px;
-color: var(–text-secondary);
-line-height: 1.5;
-margin-bottom: 20px;
-}
-
-.profile-stats {
-display: flex;
-align-items: center;
-gap: 20px;
-margin-bottom: 20px;
-padding-bottom: 20px;
-border-bottom: 1px solid var(–border-color);
-}
-
-.stat-item {
-display: flex;
-align-items: center;
-gap: 8px;
-}
-
-.stat-icon {
-font-size: 16px;
-color: var(–text-secondary);
-}
-
-.stat-number {
-font-size: 15px;
-font-weight: 500;
-color: var(–text-primary);
-}
-
-.follow-button {
-width: 100%;
-height: 40px;
-background: transparent;
-border: 1px solid var(–border-color);
-border-radius: 20px;
-color: var(–text-primary);
-font-size: 14px;
-font-weight: 500;
-font-family: “Roboto”, Arial, sans-serif;
-cursor: pointer;
-display: flex;
-align-items: center;
-justify-content: center;
-gap: 6px;
-transition: all 0.2s ease;
-}
-
-.follow-button:hover {
-background: var(–hover-bg);
-border-color: var(–text-secondary);
-}
-
-.follow-button.following {
-background: var(–accent-green);
-border-color: var(–accent-green);
-color: #fff;
-}
-
-.follow-button.following:hover {
-background: #27ae60;
-border-color: #27ae60;
-}
-
-.plus-icon {
-font-size: 18px;
-font-weight: 300;
-transition: transform 0.2s ease;
-}
-
-.follow-button:hover .plus-icon {
-transform: rotate(90deg);
-}
-
-@media (max-width: 768px) {
-.header {
-padding: 12px 16px;
-}
-
-.profile-container {
-padding: 80px 16px 40px;
-}
-
-.profile-card {
-max-width: 100%;
-}
-}
-</style>
-
+  <meta charset="UTF-8">
+  <title>Posts</title>
+  <script src="https://unpkg.com/@supabase/supabase-js"></script>
 </head>
 <body>
 
-<div class="header-wrapper">
-  <div class="header">
-    <img src="IMG_0696.png" class="logo-img" alt="Patholytica Logo">
-    <div class="header-actions">
-      <button class="icon-btn" onclick="searchArticles()" title="Search">
-        <i class="fas fa-search"></i>
-      </button>
-      <button class="icon-btn" onclick="toggleTheme()" title="Toggle theme">
-        <i class="fas fa-circle-half-stroke"></i>
-      </button>
-      <button class="icon-btn" title="User">
-        <i class="fas fa-user"></i>
-      </button>
-    </div>
-  </div>
-</div>
-
-<div class="profile-container">
-  <div class="profile-card">
-    <div class="avatar-container">
-      <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=800&h=800&fit=crop" alt="Sophie Bennett">
-    </div>
-
-<div class="card-content">
-  <div class="name-row">
-    <h2 class="profile-name">Sophie Bennett</h2>
-    <div class="verified-icon"></div>
-  </div>
-  
-  <p class="profile-bio">Product Designer who focuses on simplicity & usability.</p>
-  
-  <div class="profile-stats">
-    <div class="stat-item">
-      <i class="fas fa-users stat-icon"></i>
-      <span class="stat-number">312</span>
-    </div>
-    
-    <div class="stat-item">
-      <i class="fas fa-th-large stat-icon"></i>
-      <span class="stat-number">48</span>
-    </div>
-  </div>
-  
-  <button class="follow-button" onclick="toggleFollow(this)">
-    <span class="button-text">Follow</span>
-    <span class="plus-icon">+</span>
-  </button>
-</div>
-
-  </div>
-</div>
+<h3>Posts</h3>
+<div id="posts">Loading...</div>
 
 <script>
-function toggleTheme() {
-  document.body.classList.toggle('light-theme');
-  localStorage.setItem("theme", document.body.classList.contains("light-theme") ? "light" : "dark");
-}
+const supabase = supabasejs.createClient(
+  "https://vduqewqyvszfquntmark.supabase.co",
+  "sb_publishable_YseP73aoHam8YT6B0b9EQQ_iAUEWARI"
+);
 
-if (localStorage.getItem("theme") === "light") {
-  document.body.classList.add("light-theme");
-}
+async function loadPosts() {
+  const { data, error } = await supabase
+    .from("posts")
+    .select("content");
 
-function searchArticles() {
-  const searchQuery = prompt('Search:');
-  if (searchQuery && searchQuery.trim()) {
-    alert(`Searching for: "${searchQuery}"`);
+  if (error) {
+    document.getElementById("posts").innerText = "Error";
+    return;
   }
+
+  document.getElementById("posts").innerHTML =
+    data.map(p => `<p>${p.content}</p>`).join("");
 }
 
-function toggleFollow(button) {
-  const buttonText = button.querySelector('.button-text');
-  const plusIcon = button.querySelector('.plus-icon');
-  
-  if (button.classList.contains('following')) {
-    button.classList.remove('following');
-    buttonText.textContent = 'Follow';
-    plusIcon.textContent = '+';
-  } else {
-    button.classList.add('following');
-    buttonText.textContent = 'Following';
-    plusIcon.textContent = '✓';
-  }
-}
+loadPosts();
 </script>
 
 </body>
